<add>: vercel 에러 수정 및 트윗추가 컴포넌트 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@
   }
 
   .device-inner {
-    @apply h-[calc(852px-64px)] overflow-y-auto;
+    @apply relative h-[calc(852px-64px)] overflow-y-auto;
   }
 
   .detail-inner {
